# vortex

./: .gitignore  .gitmodules  README.md  \  compile_commands.json  launcher.sh  main  meson.build  meson.options  start.sh  vortex  vortex.c  weston-simple-shm-fix
.cache/clangd/index/: backend.h.285C9CFF891C3F76.idx  backend.h.3954926B29500512.idx  backend.h.5CDF05413BEB84B2.idx  compositor.c.BC20E298888843E2.idx  compositor.c.D07F78C252B1C08A.idx  drm.c.1847985461CBEC89.idx  drm.c.6D68ACE81DE65FB2.idx  drm.c.BD4103CCEFD3735A.idx  drm.h.6E272A0005BDBB8C.idx  drm.h.D00A57ECDBCC29A0.idx  drm.h.FB596F3FB2CB2FB8.idx  egl_gl46.c.0389F8AB0AF3190E.idx  egl_gl46.c.756C8B8C17785D45.idx  egl_gl46.c.9CC33008C122589D.idx  egl_gl46.h.4164004E0FB18860.idx  egl_gl46.h.980ADDF4E556FDA9.idx  egl_gl46.h.F60318AD90632E7E.idx  glad.h.110EA7240524884C.idx  glad.h.3ED7257C7D5E3E4A.idx  glad.h.86217EFDC0AB9B50.idx  log.c.6EA670D7922C8184.idx  log.h.B01F783627E482B8.idx  renderer.c.935C798FCC9363F6.idx  renderer.c.CD1275189224A780.idx  renderer.h.9830517B860F48DC.idx  renderer.h.DA3E662D66AFB964.idx  scene.c.76B694D25D02121A.idx  scene.c.A7E9F582023F6440.idx  scene.c.ACF4AF07382B2650.idx  scene.h.BB993CF25BE53FA3.idx  scene.h.C9FE7325B516FD5D.idx  scene.h.FF43070E0E04C973.idx  session.c.A7BD0D1D4CB1B47E.idx  session.h.5AC5598C05F50885.idx  session_drm.c.51DEF5577BCAF321.idx  session_drm.h.1452EC5A20ABF61D.idx  surf.h.2FBC9F276B92975C.idx  surf.h.D479415D8DC6B9A3.idx  surface.c.01EA885EF2915A3D.idx  surface.h.CD268766CF27E4A4.idx  (+23 more)
runara/: runara.c
src/: backend.h  compositor.c  config.h.in  log.c  log.h  meson.build  vortex.c  wl_surface.h
src/backends/: drm.c  drm.h  meson.build  wayland.c  wayland.h
src/backends/drm/: drm.c  drm.h  meson.build  session_drm.c  session_drm.h
src/backends/wayland/: meson.build  wayland.c  wayland.h
src/core/: backend.h  compositor.c  compositor.h  core_types.h  scene.c  scene.h  session.h  surface.c  surface.h  util.c  util.h
src/input/: input.c  input.h  wl_seat.c  wl_seat.h
src/input/backends/libinput/: libinput.c  libinput.h
src/input/backends/wayland/: wayland_input.c  wayland_input.h
src/protocols/: linux_dmabuf.c  linux_dmabuf.h  linux_explicit_sync.c  linux_explicit_sync.h  wl_shm.c  wl_shm.h  wl_surface.c  wl_surface.h  xdg_shell.c  xdg_shell.h
src/render/: dmabuf.h  renderer.c  renderer.h
src/render/gl/: egl_gl46.c  egl_gl46.h
src/renderers/: egl_gl46.c  egl_gl46.h
